// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple useful links should render correctly 1`] = `
.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover,
.c2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2:visited {
  color: #6E6E73;
}

.c0 {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c1 {
  padding-top: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    display: inline-block;
    min-width: 50%;
  }
}

<ul
  class="c0"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
      href="https://www.bbc.com/igbo/afirika-49883577"
    >
      Mitocinmu da sauko da sautin labarai
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
      href="https://www.bbc.com/igbo/afirika-49872694"
    >
      Labaran BBC Hausa a text
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
      href="https://www.bbc.com/igbo/afirika-49869003"
    >
      Abokan huldar BBC Hausa
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
      href="https://www.bbc.com/igbo/afirika-49883189"
    >
      Timi Frank: Osinbajo ya maka mutum biyu
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
      href="https://www.bbc.com/igbo/afirika-49869001"
    >
      Gwaninta ba ta karbi wani dan Nijeriya
    </a>
  </li>
</ul>
`;

exports[`One useful link should render correctly 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<a
  class="c0"
  href="https://www.bbc.com/igbo/afirika-49883577"
>
  Mitocinmu da sauko da sautin labarai
</a>
`;
